# training-diary

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  db.py  dependencies.py  main.py  security.py
app/models/: __init__.py  entities.py
app/routers/: analytics.py  auth.py  exercises.py  templates.py  users.py  workouts.py
app/schemas/: __init__.py  api.py
app/services/: bootstrap.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  styles.css
tests/: conftest.py  test_api.py
workout_tracker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
