[project]
name = "workout-tracker"
version = "0.1.0"
description = "Workout tracking web app backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "psycopg[binary]>=3.1,<4.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn>=0.35,<1.0",
]

[project.optional-dependencies]
test = [
  "httpx>=0.28,<1.0",
  "pytest>=8.3,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
